--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-ig-feed": "^1.0.4",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
-  
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
